Migrate to new ZAL API
Deprecate pre-ZAL API

Insert patch in `Cargo.toml` for `../halo2curves`

--- a/halo2_middleware/Cargo.toml
+++ b/halo2_middleware/Cargo.toml
@@ -33,7 +33,7 @@ rayon = "1.8"
 [dev-dependencies]
 proptest = "1"
 group = "0.13"
-halo2curves = { version = "0.6.0", default-features = false }
+halo2curves = { git = 'https://github.com/taikoxyz/halo2curves', branch = "pr-pse-exec-engine", default-features = false }
 
 [target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dev-dependencies]
 getrandom = { version = "0.2", features = ["js"] }
