--- a/halo2_common/Cargo.toml
+++ b/halo2_common/Cargo.toml
@@ -27,7 +27,7 @@ rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "katex-header.html"]
 [dependencies]
 backtrace = { version = "0.3", optional = true }
 group = "0.13"
-halo2curves = { git = 'https://github.com/taikoxyz/halo2curves', branch = "pr-pse-exec-engine", default-features = false }
+halo2curves = { version = "0.6.0", default-features = false }
 rand_core = { version = "0.6", default-features = false }
 blake2b_simd = "1" # MSRV 1.66.0
 sha3 = "0.9.1"
